--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gglobalclocks
-Title: Create a Wall of Clocks with the Local Time for Locations Around the World
+Title: Create a Wall of Clocks with the Local Times for Locations Around the World
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Gina",
